aligning items correctly

--- a/src/components/LoginScreen/LoginScreen.styles.css
+++ b/src/components/LoginScreen/LoginScreen.styles.css
@@ -42,25 +42,25 @@
 
 
 .loginScreen__body > h1{
-    font-size: 2.6rem;
+    font-size: 3.125rem;
     font-weight: 800;
     margin-bottom: 20px;
 }
 
 .loginScreen__body > h2{
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 400;
     margin-bottom: 30px;
 }
 
 .loginScreen__body > h3{
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 400;
 }
 
 .loginScreen__body{
     position: absolute;
-    top: 20%;
+    top: 30%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -82,6 +82,7 @@
 
 .loginScreen__input{
 	margin: 20px;
+	
 }
 
 .loginScreen__getStarted{
@@ -92,4 +93,6 @@
 	border: none;
 	font-weight: 600;
 	cursor: pointer;
+	position: relative;
+	top: 1px;
 }
